--- a/package.json
+++ b/package.json
@@ -15,17 +15,17 @@
 		"url": "https://github.com/ourcade/phaser3-parcel-template.git"
 	},
 	"homepage": "https://github.com/ourcade/phaser3-parcel-template",
-	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "^2.29.0",
-		"@typescript-eslint/parser": "^2.29.0",
-		"eslint": "^6.8.0",
+	"dependencies": {
+		"@typescript-eslint/eslint-plugin": "^5.35.1",
+		"@typescript-eslint/parser": "^5.35.1",
+		"eslint": "^8.22.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-plugin-import": "^2.26.0",
 		"minimist": ">=1.2.2",
 		"parcel-plugin-clean-easy": "^1.0.2",
 		"parcel-plugin-static-files-copy": "^2.4.3",
+		"phaser": "^3.55.2",
 		"typescript": "^3.8.3"
-	},
-	"dependencies": {
-		"phaser": "^3.55.2"
 	},
 	"parcelCleanPaths": [
 		"dist"
